# Sight

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
apps/CalibrationTest/: CMakeLists.txt  main.cpp
apps/FindSO3ExpThreshold/: CMakeLists.txt  main.cpp
apps/FindSO3ExpThreshold/outputs/double/: result.csv
apps/FindSO3ExpThreshold/outputs/float/: result.csv
apps/FindSO3ExpThreshold/scripts/: plot_threshold_errs.py
apps/LucasKanadeVisual/: CMakeLists.txt  main.cpp
apps/OpenCVCalibration/: CMakeLists.txt  default.xml  main.cpp
apps/PlanarTracking/: CMakeLists.txt  main.cpp
apps/Sandbox/: CMakeLists.txt  main.cpp
apps/StereoDepth/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/algorithm/: CMakeLists.txt
lib/algorithm/inc/algorithm/: union_find_dense.hpp
lib/algorithm/src/: union_find_dense.cpp
lib/calibration/: CMakeLists.txt
lib/calibration/inc/calibration/: CMakeLists.txt  allcameramodels.hpp  camera.hpp  cameramodel.hpp  cameramodelfactory.hpp  device.hpp  equidistantmodel.hpp  pinholemodel.hpp  radial4model.hpp  radialtanmodel.hpp  zhang.hpp
lib/estimation/: CMakeLists.txt
lib/estimation/inc/estimation/: quadratic.hpp  quadratic_spline.hpp
lib/features/: CMakeLists.txt
lib/features/inc/features/: brief_pattern.hpp  fast.hpp  feature.hpp  harris.hpp  optical_flow.hpp  orb.hpp
lib/geometric/: CMakeLists.txt
lib/geometric/inc/geometric/: epipolar_search.hpp  homography_estimation.hpp  homography_ops.hpp  polar_rectify.hpp  rectify.hpp  stereo.hpp  triangulation.hpp
lib/image/: CMakeLists.txt
lib/image/inc/image/: image.hpp  image_gen.hpp  image_ops.hpp  image_thresh.hpp  integral_image.hpp  pyramid.hpp
lib/image/src/: image.cpp  image_ops.cpp
lib/io/: CMakeLists.txt
lib/io/inc/io/: calibrationstore.hpp  cameramodel_io.hpp  video_device.hpp  video_sources.hpp
lib/io/src/: video_device.cpp  video_sources.cpp
lib/lie/: CMakeLists.txt
lib/lie/inc/lie/: exp_utils.hpp  lie_ops.hpp  se3.hpp  so3.hpp
lib/linear/: CMakeLists.txt
lib/linear/inc/linear/: vec.hpp  vec_ops.hpp
lib/optimization/: CMakeLists.txt
lib/optimization/inc/optimization/: camera.hpp  single_camera.hpp
lib/synthetic/: CMakeLists.txt
lib/synthetic/inc/synthetic/: calibration.hpp
lib/utils/: CMakeLists.txt
lib/utils/inc/utils/: eigentypes.hpp  ply_helpers.hpp  storage.hpp  string_helpers.hpp  timer.hpp
lib/utils/src/: string_helpers.cpp
scripts/exp_analysis/: find_so3_theta_threshold.py
tests/: CMakeLists.txt
tests/calibration/: camera_test.cpp  camera_test_helpers.hpp
tests/features/: fast_test.cpp
tests/geometric/: homography_test.cpp  polar_rectify_test.cpp  triangulation_test.cpp
tests/image/: image_gen_test.cpp  image_ops_test.cpp
tests/lie/: exp_utils_test.cpp  se3_test.cpp  so3_test.cpp  vec_test.cpp
tests/optimization/: camera_test.cpp
